--- a/miso-invaders.cabal
+++ b/miso-invaders.cabal
@@ -6,7 +6,7 @@ cabal-version:      >=1.10
 executable miso-invaders
     main-is:            Main.hs
     hs-source-dirs:     src
-    ghc-options:        -Wall -O
+    ghc-options:        -O -Wall -Wno-orphans -Wno-missing-methods
     ghcjs-options:      -dedupe
     build-depends:      base, containers, ghcjs-base, miso
     default-language:   Haskell2010
