--- a/miso-invaders.cabal
+++ b/miso-invaders.cabal
@@ -11,3 +11,19 @@ executable miso-invaders
     build-depends:      base, containers, ghcjs-base, miso, random
     default-language:   Haskell2010
 
+executable proto1
+    main-is:            proto1.hs
+    hs-source-dirs:     proto
+    ghc-options:        -O -Wall
+    ghcjs-options:      -dedupe
+    build-depends:      base, ghcjs-base, miso
+    default-language:   Haskell2010
+
+executable proto2
+    main-is:            proto2.hs
+    hs-source-dirs:     proto
+    ghc-options:        -O -Wall
+    ghcjs-options:      -dedupe
+    build-depends:      base, ghcjs-base, miso
+    default-language:   Haskell2010
+
