--- a/miso-invaders.cabal
+++ b/miso-invaders.cabal
@@ -24,6 +24,6 @@ executable proto2
     hs-source-dirs:     proto
     ghc-options:        -O -Wall
     ghcjs-options:      -dedupe
-    build-depends:      base, ghcjs-base, miso
+    build-depends:      base, containers, ghcjs-base, miso
     default-language:   Haskell2010
 
