--- a/miso-invaders.cabal
+++ b/miso-invaders.cabal
@@ -27,3 +27,11 @@ executable proto2
     build-depends:      base, containers, ghcjs-base, miso
     default-language:   Haskell2010
 
+executable proto3
+    main-is:            proto3.hs
+    hs-source-dirs:     proto
+    ghc-options:        -O -Wall
+    ghcjs-options:      -dedupe
+    build-depends:      base, containers, ghcjs-base, miso
+    default-language:   Haskell2010
+
