--- a/miso-invaders.cabal
+++ b/miso-invaders.cabal
@@ -6,7 +6,7 @@ cabal-version:      >=1.10
 executable miso-invaders
     main-is:            Main.hs
     hs-source-dirs:     src
-    ghc-options:        -O -Wall -Wno-orphans -Wno-missing-methods
+    ghc-options:        -O -Wall -Wno-orphans -Wno-missing-methods -Wno-missing-home-modules
     ghcjs-options:      -dedupe
     build-depends:      base, containers, ghcjs-base, miso, random
     default-language:   Haskell2010
@@ -29,6 +29,14 @@ executable proto2
 
 executable proto3
     main-is:            proto3.hs
+    hs-source-dirs:     proto
+    ghc-options:        -O -Wall
+    ghcjs-options:      -dedupe
+    build-depends:      base, containers, ghcjs-base, miso
+    default-language:   Haskell2010
+
+executable proto4
+    main-is:            proto4.hs
     hs-source-dirs:     proto
     ghc-options:        -O -Wall
     ghcjs-options:      -dedupe
