--- a/miso-invaders.cabal
+++ b/miso-invaders.cabal
@@ -43,3 +43,11 @@ executable proto4
     build-depends:      base, containers, ghcjs-base, miso
     default-language:   Haskell2010
 
+executable proto5
+    main-is:            proto5.hs
+    hs-source-dirs:     proto
+    ghc-options:        -O -Wall
+    ghcjs-options:      -dedupe
+    build-depends:      base, miso, random
+    default-language:   Haskell2010
+
