--- a/miso-invaders.cabal
+++ b/miso-invaders.cabal
@@ -6,8 +6,11 @@ cabal-version:      >=1.10
 executable miso-invaders
     main-is:            Main.hs
     hs-source-dirs:     src
-    ghc-options:        -O -Wall -Wno-orphans -Wno-missing-methods -Wno-missing-home-modules
-    ghcjs-options:      -dedupe
     build-depends:      base, containers, ghcjs-base, miso, random
     default-language:   Haskell2010
+    ghc-options:        -O2 -threaded -rtsopts -with-rtsopts=-N
+                        -Wall -Wno-orphans -Wno-missing-methods -Wno-missing-home-modules
+    ghcjs-options:      -dedupe
+    cpp-options:        -DGHCJS_BROWSER
+
 
