--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 pages:
-    image: juliendehos/miso-invaders
+    image: juliendehos/cicd:miso-invaders
     script:
         - nix-shell --run "cabal --http-transport=plain-http build"
         - cp dist/build/miso-invaders/miso-invaders.jsexe/all.js public/
