--- a/miso-invaders.cabal
+++ b/miso-invaders.cabal
@@ -1,7 +1,7 @@
 name:               miso-invaders
 version:            0.1
 build-type:         Simple
-cabal-version:      >=1.22
+cabal-version:      >=1.10
 
 executable miso-invaders
     main-is:            Main.hs
@@ -12,4 +12,7 @@ executable miso-invaders
                         -Wall -Wno-orphans -Wno-missing-methods -Wno-missing-home-modules
     ghcjs-options:      -dedupe
     cpp-options:        -DGHCJS_BROWSER
+    if !impl(ghcjs)
+        buildable: False
+
 
