--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 pages:
     image: nixos/nix
     script:
-        - nix-env -iA nixos.cachix
+        - nix-env -iA nixpkgs.cachix
         - cachix use miso-haskell
         - nix-shell --run "cabal --http-transport=plain-http build"
         - cp `find dist-newstyle -name all.js` public/
