--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,9 @@
+
 pages:
-    image: nixos/nix
-    script:
-        - nix-env -iA nixpkgs.cachix
-        - nix-env -iA nixpkgs.cabal-install
-        - cachix use miso-haskell
-        - nix-shell --run "cabal --http-transport=plain-http build"
-        - cp `find dist-newstyle -name all.js` public/
-    artifacts:
-        paths:
-            - public
-    only:
-        - master
+  image: nixos/nix
+  script:
+    - nix --extra-experimental-features "nix-command flakes" develop --command bash -c "./build.sh"
+  artifacts:
+    paths:
+      - public
 
