--- a/miso-invaders.cabal
+++ b/miso-invaders.cabal
@@ -1,18 +1,13 @@
+cabal-version:      3.0
 name:               miso-invaders
-version:            0.1
-build-type:         Simple
-cabal-version:      >=1.10
+version:            0.2
 
 executable miso-invaders
-    main-is:            Main.hs
-    hs-source-dirs:     src
-    build-depends:      base, containers, ghcjs-base, miso, random
-    default-language:   Haskell2010
-    ghc-options:        -O2 -threaded -rtsopts -with-rtsopts=-N
-                        -Wall -Wno-orphans -Wno-missing-methods -Wno-missing-home-modules
-    ghcjs-options:      -dedupe
-    cpp-options:        -DGHCJS_BROWSER
-    if !impl(ghcjs)
-        buildable: False
+  hs-source-dirs:   src
+  main-is:          Main.hs
+  build-depends:    base, containers, miso, random
+  default-language: GHC2021
+  ghc-options:      -Wall -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
 
+--  -Wall -Wno-orphans -Wno-missing-methods -Wno-missing-home-modules
 
