--- a/miso-invaders.cabal
+++ b/miso-invaders.cabal
@@ -5,9 +5,11 @@ version:            0.2
 executable miso-invaders
   hs-source-dirs:   src
   main-is:          Main.hs
-  build-depends:    base, containers, miso, random
+  other-modules:    Game, Point
+  build-depends:    base, containers, jsaddle, jsaddle-dom, miso, random
   default-language: GHC2021
   ghc-options:      -Wall -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
-
+  cpp-options: -DWASM
+ 
 --  -Wall -Wno-orphans -Wno-missing-methods -Wno-missing-home-modules
 
