--- a/cabal.project
+++ b/cabal.project
@@ -6,8 +6,7 @@ allow-newer:
 
 source-repository-package
   type: git
-  -- location: https://github.com/dmjio/miso
-  location: https://github.com/juliendehos/miso
+  location: https://github.com/dmjio/miso
   -- branch: master
-  tag: d520685
+  tag: b195bef
 
