--- a/cabal.project
+++ b/cabal.project
@@ -6,8 +6,9 @@ allow-newer:
 
 source-repository-package
   type: git
-  -- location: https://github.com/dmjio/miso
-  location: https://github.com/juliendehos/miso
+  location: https://github.com/dmjio/miso
+  tag: 0333c71
   -- branch: master
-  tag: e9ac997
+
+flags: +template-haskell
 
