--- a/miso-invaders.cabal
+++ b/miso-invaders.cabal
@@ -2,13 +2,30 @@ cabal-version:          3.0
 name:                   miso-invaders
 version:                0.2
 
+common options
+  ghc-options:
+    -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall
+
+common wasm
+  if arch(wasm32)
+    ghc-options:
+      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
+    cpp-options:
+      -DWASM
+
 executable miso-invaders
-  hs-source-dirs:       src
-  main-is:              Main.hs
-  other-modules:        Game Model
-  build-depends:        base, containers, jsaddle, lens, linear, miso, mtl, random
-  default-language:     GHC2021
-  ghc-options:          -Wall -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start" -ddump-splices
-  cpp-options:          -DWASM
-  default-extensions:   CPP TemplateHaskell 
+  import:
+    wasm, options           
+  hs-source-dirs:
+    src
+  main-is:
+    Main.hs
+  other-modules:
+    Game Model
+  build-depends:
+    base, containers, jsaddle, lens, linear, miso, mtl, random
+  default-language:
+    GHC2021
+  default-extensions:
+    CPP TemplateHaskell 
  
