--- a/cabal.project
+++ b/cabal.project
@@ -7,7 +7,7 @@ allow-newer:
 source-repository-package
   type: git
   location: https://github.com/dmjio/miso
-  branch: master
+  branch: 2a709ef6f222dbdfbdef1c30996d38879fa20e0f
 
 if arch(wasm32)
   -- Required for TemplateHaskell. When using wasm32-wasi-cabal from
