--- a/cabal.project
+++ b/cabal.project
@@ -7,6 +7,16 @@ allow-newer:
 source-repository-package
   type: git
   location: https://github.com/dmjio/miso
-  tag: 8c4b85e6e1279bec9b66859c54f25209701b8153
+  branch: master
+
+if arch(wasm32)
+  -- Required for TemplateHaskell. When using wasm32-wasi-cabal from
+  -- ghc-wasm-meta, this is superseded by the global cabal.config.
+  shared: True
+
+  source-repository-package
+    type: git
+    location: https://github.com/amesgen/splitmix
+    tag: cea9e31bdd849eb0c17611bb99e33d590e126164
 
 flags: +template-haskell
